# T1

./: CMakeLists.txt  Decoding.cpp  Reading.cpp  decoding_lib.h  decoding_lib.h.cpp  file_example.txt  main.cpp  printing.cpp  printing_lib.h  printing_lib.h.cpp  reading_lib.h  reading_lib.h.cpp
assets/: file-file.txt  file_example.txt
src/: decodeSteps.cpp  decoding_lib.cpp  decoding_lib.h  decoding_lib.h.cpp  main.cpp  printing_lib.cpp  printing_lib.h  printing_lib.h.cpp  prnt.cpp  rdn.cpp  reading_lib.cpp  reading_lib.h  reading_lib.h.cpp
